fix overflow

--- a/main.css
+++ b/main.css
@@ -35,7 +35,8 @@ a {
 	color: bisque;
 	text-overflow: clip;
 	white-space: nowrap;
-
+	width: 100vw;
+	overflow: hidden;
  }
 
  /* Responsive layout - makes a one column layout instead of a two-column layout */
